[package]
name = "esql-parquet-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58", features = ["ffi"] }
parquet = { version = "58", features = ["object_store"] }
datafusion = { version = "53", features = ["parquet"] }
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }
url = "2"
jni = "0.22"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
