[package]
name = "esql-parquet-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58", features = ["ffi"] }
parquet = { version = "58", features = ["arrow", "async", "object_store"] }
bytes = "1"
jni = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
object_store = { version = "0.13", features = ["aws", "azure", "gcp", "http"] }
futures = "0.3"
url = "2"
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
